update notebook introduction

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,20 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Handwritten russian letters classification system\n",
+    "# Automatic Classification of handwritten letters in Russian\n",
     "\n",
     "--- \n",
     "\n",
     "**Summary** :   \n",
-    "This notebook aims to create an engine capable to automatically classify an image of a handwritten letter into one of 33 categories/letters of Russian alphabet using the deep learning technologies.\n",
+    "This notebook aims to create an engine capable of automatically classifying an image of a handwritten letter into one of the 33 categories/letters of the Russian alphabet using deep learning technologies.\n",
     "\n",
     "\n",
     "**Data source** :    \n",
     "\n",
-    "The dataset is publicy available on Kaggle here : \n",
+    "The dataset is publicy available on Kaggle : \n",
     "https://www.kaggle.com/tatianasnwrt/russian-handwritten-letters\n",
     "\n",
-    "The dataset includes a folder with the total of 14190 PNG format images. It also has a csv file describing each image. This information file contains 4 columns:\n",
+    "The dataset includes a folder with a total of 14190 PNG-formatted images. It also has a CSV file describing each image. This information file contains 4 columns:\n",
     "\n",
     "- letter (in cyrillic);\n",
     "- file (the name of a file with this image);\n",
